# geod-ray-trans

./: geod_ray.ipynb  pyproject.toml
intgeom/: geod.py  plot.py  ray.py
