[project]
name = "geod-ray-trans"
version = "0.1.0"
description = ""
authors = [{ name = "Lauri Oksanen", email = "lauri.oksanen@helsinki.fi" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
ruff = "^0.15.12"
pre-commit = "^4.6.0"
nbstripout = "^0.9.1"


[tool.black]
line-length = 70
target-version = ["py310"]

[tool.isort]
line_length = 70
profile = "black"

[tool.ruff]
line-length = 70
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # bugbear
    "I",  # import rules (pairs nicely with isort)
    "UP", # pyupgrade
]
